Add initial implementation of ESP32 Hybrid Crypto Miner
- Updated .gitignore to include ESP-IDF specific files and configuration with secrets.
- Enhanced README.md with project features, hardware requirements, quick start guide, and documentation links.
- Created CLAUDE.md for project guidance and architecture overview.
- Established CMakeLists.txt for top-level build configuration and component directories.
- Added configuration template in config.h.example with instructions for user setup.
- Implemented main application logic in main.c with NVS initialization and logging.
- Defined partition table in partitions.csv for memory management.

--- a/.gitignore
+++ b/.gitignore
@@ -173,9 +173,27 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Cursor  
-#  Cursor is an AI-powered code editor.`.cursorignore` specifies files/directories to 
+# Cursor
+#  Cursor is an AI-powered code editor.`.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# ESP-IDF specific
+build/
+sdkconfig
+sdkconfig.old
+sdkconfig.defaults
+managed_components/
+dependencies.lock
+
+# Configuration with secrets
+config.h
+
+# VS Code ESP-IDF extension
+.vscode/
+
+# Project documentation (contains planning notes)
+spec.md
+IMPLEMENTATION_PLAN.md
